tests/api/reference/negative/12-list-get-index.asm
const invalid = list.get(list.new(), 0)
